Fix navbar spacing and make logo circle

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,6 +1,7 @@
 #logo {
     width: 70px;
-    margin-left: 15px;
+    margin-left: 30px;
+    border-radius: 50%;
 }
 
 /* #navbar {
@@ -9,5 +10,5 @@
 } */
 
 #navbarNav {
-    padding-left: 15px;
+    padding-left: 30px;
 }
